# nebula-risc-v

./: .gitignore  Makefile  README.md  build.sbt  decoderForTest.v  decoderTest.v  frontendPipeline.v  nebulaRVIO.v
docs/decode/: decode.md  decode_walkthrough.md
hdl/formal/: rvfi.scala
hdl/nebula/: Config.scala  Riscv.scala  nebula-in-order.scala
hdl/nebula/LsuL1/: L1Bus.scala  PC.scala  dmicache.scala  fetchPipeline.scala  iCache.scala
hdl/nebula/cache/: PC.scala  dmicache.scala  iCache.scala
hdl/nebula/cpu/: NebulaCfg.scala  package.scala
hdl/nebula/decode/: Decode.scala  Decode_table.scala  Decoder.scala  Decompressor.scala  MicroOp.scala  PreDecode.scala  Rv.ignore  Rv.scala
hdl/nebula/dispatch/: RS_Source.scala  SrcPlugin.scala  regFile.scala  scheduler.scala
hdl/nebula/execute/: ExecutePipeline.scala  ExecutionUnit.scala  ExecutionUnitElement.scala  FunctionalUnit.scala  IntAlu.scala  IntDiv.scala  IntMul.scala  agu.scala  branch.scala  execute.scala  intAlu.scala  jal.scala  writeBack.scala  writeBackPlugin.scala
hdl/nebula/scheduler/: IntScheduler.scala  RAT.scala  regFile.scala  reservationStation.scala  schedule_playground.scala
hdl/nebula/sim/: Decoder_test.scala  InsnExtractorTest.scala  MemAdapterTest.scala  MemStreamTest.scala  Test.scala
hdl/test/: MainMemory_Sim.scala  cache_test.scala  compile_inOrder.scala  decode_test.scala  load_bins.scala.scala  riscv-tests.scala  test-frontend.scala  test_inOrder.scala
prog/common/: CMakeLists.txt
prog/test/: CMakeLists.txt  Makefile
prog/test/src/: main.S
test_gen/: dump_to_test.ipynb
(+51 files in other folders)
